Updating travis configuration, now travis supports clang by default

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ install:
 # clang++-3.2
     - sudo add-apt-repository --yes ppa:h-rayflood/llvm
     - sudo apt-get -qq update
-    - sudo apt-get -qq install libstdc++-4.8-dev clang-3.2
-# Dream - openAL
-    - sudo apt-get -qq install libopenal-dev 
+    - sudo apt-get -qq install --force-yes libstdc++-4.8-dev clang-3.2
 # ruby 2.0 and teapot
     - rvm use 2.0 --install --binary --fuzzy
     - gem install teapot
